# rescue-team-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  package.json  play.bat  pyproject.toml  vitest.config.js
ai_worker/: apps.py
backend/: conftest.py  manage.py  pyproject.toml
backend/api/: models.py  tests.py  urls.py
backend/api/agents/: chansey.py  duskull.py  electivire.py  kangaskhan.py  kecleon.py  marowak.py  orchestrator.py  planner.py  registry.py  safety.py  schemas.py  xatu.py
backend/api/agents/tests/: conftest.py  test_chansey.py  test_duskull.py  test_electivire.py  test_kangaskhan.py  test_kecleon.py  test_marowak.py  test_registry.py  test_safety.py  test_xatu.py
backend/api/fixtures/: agents.json
backend/api/migrations/: 0001_initial.py  0002_session_workspace_path_sessionsummary.py  0003_agent_dex_id.py  0004_session_partner_target_session_pending_plan_and_more.py  0005_add_error_agent_status.py
backend/api/quiz/: data.py  logic.py  tests.py  urls.py  views.py
backend/api/session/: services.py  tests.py  urls.py  views.py
backend/config/: constants.py  llm.py  models.py
backend/game/: urls.py  views.py
backend/game/management/commands/: play.py
backend/game/templates/game/: index.html
backend/rescue_team/: settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
core_infra/: apps.py
deploy/: DEPLOY.md
frontend/: package-lock.json  package.json  tsconfig.json
game_engine/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
scripts/: gen_pokedex.py
(+51 files in other folders)
