[project]
name = "rescue-team-ai"
version = "0.1.0"
description = "Gamified multi-agent AI orchestration — PMD themed"
requires-python = ">=3.13,<3.14"

dependencies = [
    "django>=6.0.5,<6.1",
    "pydantic-ai>=1.93.0,<2",
    "anthropic>=0.101.0,<1",
    "openai>=2.36.0,<3",
    "google-genai>=2.0.1,<3",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-django>=4.12.0,<5",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.extras]
dev = ["pytest", "pytest-django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rescue_team.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
